[tool.poetry]
name = "R2FYOU"
version = "0.1.0"
description = "R-2 for you. Find your R2 setup"
authors = ["Esteve Soria <esofabian@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pvrecorder = "^1.2.2"
matplotlib = "^3.9.2"
pyqt5 = "^5.15.11"
pysinewave = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
line_length = 88

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'